--- a/.github/workflows/snack.yml
+++ b/.github/workflows/snack.yml
@@ -12,9 +12,10 @@ jobs:
   generate:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
+      - name: Checkout Repository
         uses: actions/checkout@v2
 
-      - name: Generate the snake graph
+      - name: Generate Snake Graph
         uses: Platane/snk@v2
+
 
