--- a/.github/workflows/snack.yml
+++ b/.github/workflows/snack.yml
@@ -15,7 +15,9 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v2
 
-      - name: Generate Snake Graph
+      - name: Generate the snake animation
         uses: Platane/snk@v2
+        with:
+          snake_key: ${{ secrets.SNAKE_KEY || 'default' }}
 
 
