--- a/.github/workflows/snack.yml
+++ b/.github/workflows/snack.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v2
 
-      - name: Generate the snake animation
+      - name: Generate Snake Graph
         uses: Platane/snk@v2
 
 
