--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -18,3 +18,11 @@ jobs:
         uses: Platane/snk@v2
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
+
+
+      - name: Generate Snake
+        uses: Platane/snk@v2
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          output: dist/github-contribution-grid-snake-dark.svg
+          output.svg.style: dark
