--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -5,20 +5,14 @@ on:
     branches:
       - main
   schedule:
-    - cron: "0 0 * * *" # Executa uma vez por dia
+    - cron: "0 0 * * *" # Executa diariamente
 
 jobs:
   generate:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: Checkout Repository
         uses: actions/checkout@v2
-
-      - name: Generate Snake
-        uses: Platane/snk@v2
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-
 
       - name: Generate Snake
         uses: Platane/snk@v2
@@ -26,3 +20,9 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           output: dist/github-contribution-grid-snake-dark.svg
           output.svg.style: dark
+
+      - name: Deploy Snake
+        uses: crazy-max/ghaction-github-pages@v3.1.0
+        with:
+          target_branch: output
+          github_token: ${{ secrets.GITHUB_TOKEN }}
