--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -17,12 +17,7 @@ jobs:
       - name: Generate Snake
         uses: Platane/snk@v2
         with:
+          github_user_name: 'SEU_USUARIO' # Coloque seu nome de usuário GitHub aqui
           github_token: ${{ secrets.GITHUB_TOKEN }}
           output: dist/github-contribution-grid-snake-dark.svg
-          output.svg.style: dark
-
-      - name: Deploy Snake
-        uses: crazy-max/ghaction-github-pages@v3.1.0
-        with:
-          target_branch: output
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          outputs: dist/github-contribution-grid-snake-dark.svg
