--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,11 +1,11 @@
-name: Generate Snake Animation
+name: Gerar Snake Animation
 
 on:
   push:
     branches:
       - main
   schedule:
-    - cron: "0 0 * * *" # Executa diariamente
+    - cron: "0 0 * * *" # Executa todos os dias
 
 jobs:
   generate:
@@ -14,10 +14,17 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v2
 
-      - name: Generate Snake
+      - name: Instalação de Dependências
+        run: npm install
+
+      - name: Gerar Snake Animation no Modo Dark
         uses: Platane/snk@v2
         with:
-          github_user_name: 'OtávioDayrots' # Coloque seu nome de usuário GitHub aqui
+          github_user_name: 'OtavioDayrots' # Seu nome de usuário GitHub
+          svg_style: 'dark' # Modo Dark
+
+      - name: Publicar no Branch de Output
+        uses: peaceiris/actions-gh-pages@v3
+        with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          output: dist/github-contribution-grid-snake-dark.svg
-          outputs: dist/github-contribution-grid-snake-dark.svg
+          publish_dir: ./dist
